<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_videos"
        android:icon="@drawable/ic_play"
        android:title="@string/title_videos" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_post"
        />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
