<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_auth_bg"
        android:layout_width="414dp"
        android:layout_height="205dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_auth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_sign_in"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/tv_auth_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_sign_in_subtitle"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_subtitle_size"
        app:layout_constraintStart_toStartOf="@+id/tv_auth_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_auth_title"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/tv_auth_subtitleChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_sign_in_subtitleChild"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_subtitle_size"
        app:layout_constraintStart_toStartOf="@+id/tv_auth_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_auth_title"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_auth_email_field"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginEnd="@dimen/margin_auth"
        android:padding="@dimen/padding_field"
        android:imeOptions="actionNext"
        android:background="@drawable/bg_auth_field"
        android:drawablePadding="@dimen/padding_field"
        android:drawableStart="@drawable/ic_mail"
        android:fontFamily="@font/nunito_sans_reguler"
        android:hint="@string/text_hint_email_field"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_body_size"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_auth_bg"
        tools:ignore="Autofill"
        android:drawableLeft="@drawable/ic_mail"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginEnd="@dimen/margin_auth"
        android:background="@drawable/bg_auth_field"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/padding_field"
        android:imeOptions="actionDone"
        android:fontFamily="@font/nunito_sans_reguler"
        android:hint="@string/text_hint_password_field"
        android:inputType="textPassword"
        android:padding="@dimen/padding_field"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="Autofill"
        android:drawableLeft="@drawable/ic_password"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_btn_forgot_password"
        android:textColor="@color/colorOrgane"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_auth"
        android:layout_marginEnd="@dimen/margin_auth"
        android:background="@drawable/bg_auth_btn"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_btn_sign_in"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        tools:targetApi="jelly_bean" />


    <TextView
        android:id="@+id/text_no_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/text_not_have_an_account"
        android:textColor="@color/colorOrgane"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="jelly_bean" />

</androidx.constraintlayout.widget.ConstraintLayout>