<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPost"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/bg_auth_btn"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_addstatus"
                android:textColor="@color/colorTextORIcon"
                android:textSize="12dp" />

            <EditText
                android:id="@+id/edtPostName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_auth_field"
                android:drawablePadding="@dimen/padding_field"
                android:fontFamily="@font/nunito_sans_reguler"
                android:gravity="top"
                android:hint="@string/text_titlestatus"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/padding_field"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size"
                tools:ignore="Autofill"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_auth_field"
                android:drawablePadding="@dimen/padding_field"
                android:fontFamily="@font/nunito_sans_reguler"
                android:gravity="top"
                android:hint="@string/text_contentstatus"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|text"
                android:padding="@dimen/padding_field"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size"
                tools:ignore="Autofill"
                tools:targetApi="jelly_bean" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_auth_field"
                android:drawablePadding="@dimen/padding_field"
                android:fontFamily="@font/nunito_sans_reguler"
                android:gravity="top"
                android:hint="@string/text_address"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/padding_field"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/text_body_size"
                tools:ignore="Autofill"
                tools:targetApi="jelly_bean" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="@dimen/margin_auth"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_auth"
                android:background="@drawable/bg_image_post"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_image_post"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/imgPicture"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/post_image"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/nunito_sans_reguler"
                        android:text="@string/text_addimg"
                        android:textSize="10dp" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/imgNewPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/upload" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="1"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>